--- a/src/component/ToggleButton.css
+++ b/src/component/ToggleButton.css
@@ -135,8 +135,9 @@ a {
   border-radius: 10px;
   font-weight: bold;
   cursor: pointer;
-  margin-left: 8rem;
+  margin-left: 10rem;
   margin-top: 3rem;
+  background: lightcoral;
 }
   
   .first {
