--- a/src/component/ToggleButton.css
+++ b/src/component/ToggleButton.css
@@ -3,7 +3,26 @@ body {
   padding: 0;
   font-family: Arial, Helvetica, sans-serif;
   box-sizing: border-box;
-  background: #ddd;
+}
+
+#pricing {
+  text-align: center;
+  margin-bottom: -4rem;
+  margin-top: 2rem;
+  color: lightslategray;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 1.5rem;
+  font-weight: bold;
+}
+
+.spin {
+  justify-content: center;
+  text-align: center;
+  margin-top: 5rem;
+}
+
+span{
+  font-weight: bold;
 }
 
 .main {
@@ -14,7 +33,22 @@ body {
   align-items: center;
 }
 
+#btn-main {
+  border: none;
+  border-radius: 5px;
+  font-weight: bold;
+  margin-left: 46%;
+  margin-top: 10%;
+  background: hsl(237, 63%, 64%);
+  color: #fff;
+  padding: 0.3rem 0.6rem;
+  transition: all 2s ease-in-out;
+}
 
+#btn-main:hover {
+  box-shadow: 3px 3px 10px slategray;
+  cursor: pointer;
+}
 
 .first {
   border: 2px black solid;
@@ -106,10 +140,30 @@ a {
     padding: 0;
     font-family: Arial, Helvetica, sans-serif;
     box-sizing: border-box;
-    background: #333;
+    background: './index.css';
   }
   
+  #pricing {
+    text-align: center;
+    margin-bottom: -2rem;
+    margin-top: 2rem;
+    color: lightslategray;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 1.5rem;
+    font-weight: bold;
+  }
+
+  .spin {
+    justify-content: center;
+    text-align: center;
+    margin-top: 5rem;
+    margin-bottom: 7rem;
+  }
   
+  span{
+    font-weight: bold;
+  }
+
   .main {
     display: flex;
     flex-direction: column;
@@ -121,6 +175,14 @@ a {
     margin-bottom: 3rem;
   }
   
+  #btn-main {
+    margin-left: 40%;
+    margin-top: 10%;
+    margin-bottom: 10%;
+    padding: 0.3rem 0.6rem;
+    background: hsl(237, 63%, 64%);
+    color: #fff;
+  }
   
   .first {
     border: 2px black solid;
@@ -205,3 +267,22 @@ a {
   }
 }
 
+#learn {
+  transition: all 2s ease-in-out;
+}
+
+#learn:hover {
+  background: #fff;
+  color: hsl(237, 63%, 64%);
+  box-shadow: 3px 3px 10px slategray;
+}
+
+.learn {
+  transition: all 2s ease-in-out;
+}
+
+.learn:hover {
+  background: hsl(237, 63%, 64%) !important;
+  color: #fff;
+  box-shadow: 3px 3px 10px slategray;
+}
