--- a/src/component/ToggleButton.css
+++ b/src/component/ToggleButton.css
@@ -33,7 +33,7 @@ span{
   align-items: center;
 }
 
-<<<<<<< HEAD
+
 #btn-main {
   border: none;
   border-radius: 5px;
@@ -49,7 +49,7 @@ span{
 #btn-main:hover {
   box-shadow: 3px 3px 10px slategray;
   cursor: pointer;
-=======
+}
   
 #btn {
   border: none;
@@ -58,7 +58,6 @@ span{
   cursor: pointer;
   margin-left: 29rem;
   margin-top: 3rem;
->>>>>>> 90122ad39230a26de8f3d7c8f8cea5edf2b5c573
 }
 
 .first {
@@ -185,7 +184,6 @@ a {
     margin-top: 13rem;
     margin-bottom: 3rem;
   }
-<<<<<<< HEAD
   
   #btn-main {
     margin-left: 40%;
@@ -195,7 +193,6 @@ a {
     background: hsl(237, 63%, 64%);
     color: #fff;
   }
-=======
 
     
 #btn {
@@ -208,7 +205,6 @@ a {
   background: hsl(237, 63%, 64%);
   color: white;
 }
->>>>>>> 90122ad39230a26de8f3d7c8f8cea5edf2b5c573
   
   .first {
     border: 2px black solid;
